syntax = "proto3";

// A metric resource
message Metric {
  metadata = 1;
  config_data = 2;
}

message metadata {
  // the ID in as a uid
  string id = 1;

  string description = 2;

  string version = 3;

  string comments = 4;
}

message config_data {
  repeated assessment_values values: 1;
  
  int64 interval: 2;
}

message assessment_values {
  string operator: 1;
  
  string target value: 2;
}